@@ -142,6 +142,8 @@ fixes:
   den Patch und an Stefan Bauer für den Hinweis darauf.
 - Fix für einen Absturz beim Hin- und Herschalten von mit/ohne Untertitel bei Timern mit
   mit sehr langen Episodennamen, Danke an Ville Skyttä für den Patch.
+- Korrektur beim file descriptor handling bei fehlerhafter SVDRP-Verbindung, Danke an  
+  Teemu Rantanen für einen Patch.
 
 
 2008-04-29: Version 0.9.24
